style(xxs): fix white space
This commit includes changes to white spaces on xxs screens.
The changes include:

- Adjusting text size of hero info block.
- Adjusting text size of escrow info block.
- Adjusting the phone image in the escrow image block.

These changes ensure that the web page renders well on xxs devices and
window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ vertical-align: top;
   display: flex;
   flex-direction: column; 
   justify-content: center; 
-  gap: 1.7rem;   
+  gap: 1.9rem;   
 }
 
 .hero__info-heading-block {
@@ -138,7 +138,7 @@ vertical-align: top;
 }
 
 .hero__info-text {
-  font-size: 1.7rem;
+  font-size: 1.6rem;
 }
 
 /* hero__offer-block */
@@ -153,11 +153,11 @@ vertical-align: top;
   gap:3rem;
   list-style: none;
   font-weight:600; 
- 
+ font-size:1.6rem;
 }
 
 .hero__offer-list-item:not(:last-of-type) {
-  margin-bottom:1.5rem
+  margin-bottom:1.35rem
 }
 
 /* hero__mail-block */
@@ -238,8 +238,8 @@ vertical-align: top;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 3rem;
-  padding: 7rem 0;
+  gap: 1.5rem;
+  padding: 5rem 0;
 }
 
 .escrow__social-box {
@@ -258,7 +258,7 @@ vertical-align: top;
 }
 
 .escrow__info-block {
-  min-height: 65rem;
+  min-height: 55rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -277,6 +277,7 @@ vertical-align: top;
   padding: 0 10%; 
   border-radius:2% 2% 0 0;
   gap:1rem;
+  margin-bottom:-12rem;
 }
 
 .escrow__info-heading-block {
@@ -285,7 +286,7 @@ vertical-align: top;
 }
 
 .escrow__info-heading {
-  font-size: 2.7rem;
+  font-size: 2.1rem;
   font-weight: 600;
   color: #000000;
   line-height: 1.2;
@@ -293,9 +294,13 @@ vertical-align: top;
 
 .escrow__info-text-block {
   min-height: 10rem;
-  width: 92%;
+  width: 100%;
   display: flex;
   align-items: center;
+}
+
+.escrow__info-text {
+  font-size:1.4rem;
 }
 
 .escrow__info-link-block {
@@ -307,6 +312,8 @@ vertical-align: top;
 
 .escrow__info-link {
   text-decoration: underline;
+  font-size:1.4rem;
+  z-index: 5;
 }
 
 .escrow__info-image-block {
@@ -315,15 +322,14 @@ vertical-align: top;
   display:flex;
   justify-content: center; 
   background: #f0eeeb;  
-  border-radius:0 0 2% 2%;
+  border-radius:0 0 2% 2%;  
 }
 
 .escrow__info-image {
-  min-height: 42rem;
+  min-height: 26rem;
   width: 90%;
   background:url(assets/Phone\ Mockup\ \(Mobile\).png) no-repeat center center;
-  background-size:auto;   
-  margin-top:-10rem; 
+  background-size:contain;    
 }
 
 .escrow__info-img { 
